<resources>
    <string name="app_name">Sony Headphones Control</string>
    <string name="disable_ambient_sound_control">Disable ambient sound control</string>
    <string name="enable_noise_cancelling">Enable noise cancelling</string>
    <string name="enable_wind_cancelling">Enable wind cancelling</string>
    <string name="ambient_sound">Ambient sound</string>
    <string name="volume">Volume:</string>
    <string name="voice_optimized">Voice optimized</string>
    <string name="test">Test</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="io_error">IO error (Another application using a headset? Is it connected?)</string>
    <string name="io_error_hint">IO error (Another application using a headset? Is it connected?)</string>
    <string name="headset_not_found">Sony Headset is not found</string>
    <string name="ok">OK</string>
    <string name="timeout_error">Error: timeout</string>
    <string name="interrupted_error">Error: interrupted</string>
</resources>
